@@ -53,6 +53,9 @@ class BaseObjectConvertTest extends BookstoreTestBase
   <Publisher>
     <Id>1234</Id>
     <Name><![CDATA[Penguin]]></Name>
+    <Books>
+      <Book><![CDATA[*RECURSION*]]></Book>
+    </Books>
   </Publisher>
   <Author>
     <Id>5678</Id>
@@ -60,6 +63,9 @@ class BaseObjectConvertTest extends BookstoreTestBase
     <LastName><![CDATA[Byron]]></LastName>
     <Email></Email>
     <Age></Age>
+    <Books>
+      <Book><![CDATA[*RECURSION*]]></Book>
+    </Books>
   </Author>
 </data>
 
@@ -107,12 +113,16 @@ AuthorId: 5678
 Publisher:
   Id: 1234
   Name: Penguin
+  Books:
+    Book_0: '*RECURSION*'
 Author:
   Id: 5678
   FirstName: George
   LastName: Byron
   Email: null
   Age: null
+  Books:
+    Book_0: '*RECURSION*'
 
 EOF;
 		return array(array($expected));
@@ -149,7 +159,7 @@ EOF;
 	public function toJsonDataProvider()
 	{
 		$expected = <<<EOF
-{"Id":9012,"Title":"Don Juan","ISBN":"0140422161","Price":12.99,"PublisherId":1234,"AuthorId":5678,"Publisher":{"Id":1234,"Name":"Penguin"},"Author":{"Id":5678,"FirstName":"George","LastName":"Byron","Email":null,"Age":null}}
+{"Id":9012,"Title":"Don Juan","ISBN":"0140422161","Price":12.99,"PublisherId":1234,"AuthorId":5678,"Publisher":{"Id":1234,"Name":"Penguin","Books":{"Book_0":"*RECURSION*"}},"Author":{"Id":5678,"FirstName":"George","LastName":"Byron","Email":null,"Age":null,"Books":{"Book_0":"*RECURSION*"}}}
 EOF;
 		return array(array($expected));
 	}
@@ -184,7 +194,8 @@ EOF;
 
 	public function toCsvDataProvider()
 	{
-		$expected = "Id,Title,ISBN,Price,PublisherId,AuthorId,Publisher,Author\r\n9012,Don Juan,0140422161,12.99,1234,5678,\"a:2:{s:2:\\\"Id\\\";i:1234;s:4:\\\"Name\\\";s:7:\\\"Penguin\\\";}\",\"a:5:{s:2:\\\"Id\\\";i:5678;s:9:\\\"FirstName\\\";s:6:\\\"George\\\";s:8:\\\"LastName\\\";s:5:\\\"Byron\\\";s:5:\\\"Email\\\";N;s:3:\\\"Age\\\";N;}\"\r\n";
+		$expected = "Id,Title,ISBN,Price,PublisherId,AuthorId,Publisher,Author\r\n9012,Don Juan,0140422161,12.99,1234,5678,\"a:3:{s:2:\\\"Id\\\";i:1234;s:4:\\\"Name\\\";s:7:\\\"Penguin\\\";s:5:\\\"Books\\\";a:1:{s:6:\\\"Book_0\\\";s:11:\\\"*RECURSION*\\\";}}\",\"a:6:{s:2:\\\"Id\\\";i:5678;s:9:\\\"FirstName\\\";s:6:\\\"George\\\";s:8:\\\"LastName\\\";s:5:\\\"Byron\\\";s:5:\\\"Email\\\";N;s:3:\\\"Age\\\";N;s:5:\\\"Books\\\";a:1:{s:6:\\\"Book_0\\\";s:11:\\\"*RECURSION*\\\";}}\"\r\n";
+		
 		return array(array($expected));
 	}
 
